Spacing fix.

--- a/app/assets/stylesheets/_site.scss
+++ b/app/assets/stylesheets/_site.scss
@@ -4039,7 +4039,6 @@ Settings
         }
         h3 {
             font-size: 24px;
-            letter-spacing: -1px;
             margin: 0;
             a {
                 color: $text-color;
